# rf_convertor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  OUTPUT_LAYOUT_PROPOSAL.md  OUTPUT_PLANNER_CHECKLIST.md  Paymont Api Collection.yml  README.md  auth_cert_analysis.md  pyproject.toml  skills-lock.json  zprava-hluboky-vyzkum (2).md
.claude/: settings.local.json
examples/input/: sample_collection.yaml
examples/output/: cart.robot  products.robot
output/: security_lab_helpers.py
output/bru_run/: .bruno_to_robot_cache.json  __init__.robot  health_check.robot
output/bru_run/_shared/: common_keywords.robot
output/bru_run/shared/: variables.robot
output/helper_run/: users.robot  users_helpers.py
output/helper_run/shared/: variables.robot
src/bruno_to_robot/: __init__.py  cache.py  cli.py  output_planner.py
src/bruno_to_robot/generator/: __init__.py  robot_generator.py
src/bruno_to_robot/mapper/: __init__.py  assertion_mapper.py  auth_mapper.py  request_mapper.py  script_mapper.py
tests/: conftest.py
tests/fixtures/: bruno_export_multi_env.yaml  bruno_export_nested_items.yaml  collection.yaml  simple_get.yaml  simple_post.yaml  split_helper_collection.yaml
tests/integration/: __init__.py  test_full_conversion.py
tests/unit/: __init__.py  test_auth_mapper_oauth2.py  test_bru_parser.py  test_build_cache.py  test_cert_manager.py  test_cli.py  test_generator.py  test_layout_config.py  test_mapper.py  test_oauth2_client.py  test_output_planner.py  test_parser.py  test_parser_bruno_export.py  test_parser_environment_selection.py
(+23 files in other folders)
